// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Card.Group matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-one-half nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card"
      >
        <div
          class="nhsuk-card__content"
        >
          <h2
            class="nhsuk-card__heading"
          >
            Test Card 1
          </h2>
          <p
            class="nhsuk-card__description"
          >
            Test Card 1 Description
          </p>
        </div>
      </div>
    </div>
    <div
      class="nhsuk-grid-column-one-half nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card"
      >
        <div
          class="nhsuk-card__content"
        >
          <h2
            class="nhsuk-card__heading"
          >
            Test Card 2
          </h2>
          <p
            class="nhsuk-card__description"
          >
            Test Card 2 Description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-card"
  >
    <img
      alt="imageAlt"
      class="nhsuk-card__img"
      src="imageSrc"
    />
    <div
      class="nhsuk-card__content"
    >
      <h2
        class="nhsuk-card__heading"
      >
        If you need help now but it's not an emergency
      </h2>
      <p
        class="nhsuk-card__description"
      >
        Go to 
        <a
          href="#"
        >
          111.nhs.uk
        </a>
         or 
        <a
          href="#"
        >
          call 111
        </a>
      </p>
    </div>
  </div>
</div>
`;
